add Devise for user and Categories for Articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,9 @@
     <% end %>
   </div>
   <% end %>
+  <% if user_signed_in? %>
   <div class="button-new">
       <%= link_to "New Article", new_article_path %>
   </div>
+  <% end %>
 </div>
