--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,9 @@
       <a href="<%= @article.image %>" class="img-wrap"> <img src="<%= @article.image %>" alt="<%= @article.name %>"> </a>
       <% end %>
       <p><%= @article.content %> </p>
+      <% if user_signed_in? %>
       <%= link_to "Edit Article", edit_article_path(@article) %>
       <%= link_to "Delete Article", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %>
+      <% end %>
     </div>
 </div>
