--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -321,6 +321,17 @@
        padding: .5rem 1.6rem;
        font-size: 1rem;
      }
+
+     .field {
+       label {
+         display: inline-block;
+       }
+       input[type="checkbox"] {
+         display: inline-block;
+         width: auto;
+         margin: 1rem auto 1.5rem;
+       }
+     }
      @media screen and (max-width: 650px) {
        padding: 1.8rem 2rem;
      }
