--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @article do |f| %>
 <%= f.text_field :name, placeholder: "Title" %>
 <%= f.text_field :image, placeholder: "Image URL"%>
+<%= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"} %>
 <%= f.text_area :content, placeholder: "Content" %>
 <%= button_tag("Create") %>
 <% end %>
