--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
   <footer>
     <hr>
-    <p>&copy TelnairWorld 2016, All rights reserved</p>
+    <p>&copy telnairworld 2016, All rights reserved</p>
   </footer>
 
 </body>
