--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -337,3 +337,23 @@
      }
    }
  }
+ .article_content {
+   margin-top: .5rem;
+ }
+
+ .video_wrap {
+   margin: 1rem auto 1.2rem;
+   position: relative;
+   padding-bottom: 56.25%;
+   padding-top: 25px;
+   height: 0;
+   border-radius: 4px;
+   border: 10px solid $light-gray;
+   iframe {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+   }
+ }
