--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,13 @@
    font-size: 16px;
  }
 
+
+$accent: #64b2ef;
+$accent-light: #869cad;
+$light-gray: #f5f8fa;
+$white: #ffffff;
+$text-color: #122a3c;
+
  h1 {
    font-size: 1rem;
    font-weight: 700;
@@ -37,11 +44,10 @@
    margin: 0;
  }
 
- $accent: #64b2ef;
- $accent-light: #869cad;
- $light-gray: #f5f8fa;
- $white: #ffffff;
- $text-color: #122a3c;
+
+ small {
+   color: $accent;
+ }
 
 
  @keyframes Grow {
