--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,9 @@ $text-color: #122a3c;
 
  small {
    color: $accent;
+   @media screen and (max-width:400px) {
+     font-size: .65rem;
+   }
  }
 
 
@@ -135,6 +138,9 @@ $text-color: #122a3c;
      font-weight: 500;
      text-decoration: none;
      letter-spacing: .05rem;
+     @media screen and (max-width:400px) {
+       font-size: .65rem;
+     }
      &:hover {
        color: $accent;
      }
@@ -148,6 +154,9 @@ $text-color: #122a3c;
      background: $accent-light;
      border-radius: 50%;
      transform: translate(-20%,-30%);
+     @media screen and (max-width:400px) {
+       margin: 0 .2rem;
+     }
    }
  }
 
