--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,7 +105,39 @@ $text-color: #122a3c;
      letter-spacing: .1rem;
      }
    }
+   nav {
+     border-bottom: 5px solid $accent;
+     display: block;
+     position: absolute;
+     background: $text-color;
+     padding: 1rem;
+     top: 2.5rem;
+     opacity: 0;
+     right: 1.75rem;
+     transition: all .2s ease-in-out;
+     transform: scale(0);
+     transform-origin: top;
+     a {
+       display: block;
+       text-align: center;
+       color: $white;
+       text-decoration: none;
+       font-size: .85rem;
+       text-transform: uppercase;
+       padding: .3rem 1rem;
+       &:hover {
+         color: $accent;
+       }
+     }
+   }
+   nav.nav-open {
+     opacity: 1;
+     transform: scale(1);
+     z-index: 1;
+   }
    .forum-link {
+     z-index: 2;
+     position: relative;
      float: right;
      transition: all .2s ease-in-out;
      a {
@@ -125,10 +157,15 @@ $text-color: #122a3c;
    }
    @media screen and (max-width: 420px) {
      padding: .8rem 1rem;
+     nav {
+       right: 0;
+       padding: 1rem .8rem;
+     }
+
    }
  }
 
- nav {
+ nav.category {
    margin: 0 auto 1rem;
    text-align: center;
    a {
@@ -176,58 +213,63 @@ $text-color: #122a3c;
  }
 
 
+
+
+// Article styles..
+
+
  #content-mean {
    text-align: center;
    max-width: 32rem;
    margin: 0 auto;
    padding: 0 2rem;
-   .article {
-     cursor: pointer;
-     margin: .7rem 0;
-     position: relative;
-     width: 100%;
-     padding: .8rem 0;
-     background: $white;
-     box-shadow: 0 0 3px rgba(0, 0, 0, .1);
-     a {
-       text-decoration: none;
-     }
-     &:hover {
-       box-shadow: 0 0 5px rgba(0, 0, 0, .2);
-       h1 {
-         color: $accent;
-       }
-     }
-     &::before {
-       content: "";
-       position: absolute;
-       height: 1.2rem;
-       width: 1.2rem;
-       border-radius: 50%;
-       background: $light-gray;
-       top: 50%;
-       left: -.5rem;
-       transform: translateY(-50%);
-     }
-     &::after {
-       content: "";
-       position: absolute;
-       height: 1.2rem;
-       width: 1.2rem;
-       border-radius: 50%;
-       background: $light-gray;
-       top: 50%;
-       right: -.5rem;
-       transform: translateY(-50%);
-     }
+ }
+ .article {
+   cursor: pointer;
+   margin: .7rem 0;
+   position: relative;
+   width: 100%;
+   padding: .8rem 0;
+   background: $white;
+   box-shadow: 0 0 3px rgba(0, 0, 0, .1);
+   a {
+     text-decoration: none;
+   }
+   &:hover {
+     box-shadow: 0 0 5px rgba(0, 0, 0, .2);
      h1 {
-       margin: 0;
-       padding: 0;
-       font-weight: 500;
-       letter-spacing: .05rem;
-       font-size: 0.81rem;
-       color: $accent-light;
+       color: $accent;
      }
+   }
+   &::before {
+     content: "";
+     position: absolute;
+     height: 1.2rem;
+     width: 1.2rem;
+     border-radius: 50%;
+     background: $light-gray;
+     top: 50%;
+     left: -.5rem;
+     transform: translateY(-50%);
+   }
+   &::after {
+     content: "";
+     position: absolute;
+     height: 1.2rem;
+     width: 1.2rem;
+     border-radius: 50%;
+     background: $light-gray;
+     top: 50%;
+     right: -.5rem;
+     transform: translateY(-50%);
+   }
+   h1 {
+     margin: 0;
+     padding: 0;
+     font-weight: 500;
+     letter-spacing: .05rem;
+     font-size: 0.81rem;
+     color: $accent-light;
    }
  }
 
@@ -435,3 +477,249 @@ $text-color: #122a3c;
      height: 100%;
    }
  }
+
+ // Home styles...
+
+.container {
+  max-width: 80rem;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  .grid {
+    background: $white;
+    padding: 2rem;
+    border-radius: 5px;
+    border: 1px solid transparentize($accent-light, .8);
+    margin: .5rem .5rem;
+    text-align: center;
+    >h1 {
+      color: $accent-light;
+      letter-spacing: 1px;
+      font-weight: 500;
+    }
+    >a {
+      color: $accent;
+      text-decoration: none;
+      position: relative;
+      font-size: .95rem;
+      margin-top: 1rem;
+      display: inline-block;
+      &::after {
+        content: "";
+        width: 100%;
+        height: .15rem;
+        background: $accent;
+        position: absolute;
+        left: 0;
+        top: 270%;
+        transition: all .3s;
+        opacity: 0;
+      }
+      &:hover {
+        &::after {
+          top: 120%;
+          opacity: 1;
+        }
+      }
+    }
+  }
+  .grid-big {
+    width: 39%;
+    color: $accent-light;
+    img {
+      margin: 2rem auto;
+      text-align: center;
+      max-width: 34%;
+    }
+    p {
+      padding: 0 1.5rem;
+    }
+  }
+  .grid-small {
+    width: 28%;
+    >h1 {
+      margin-bottom: 1.5rem;
+    }
+    .article {
+      margin: .7rem auto;
+      text-align: center;
+      &::before, &::after {
+        background: $white;
+      }
+    }
+    >p {
+      letter-spacing: .3px;
+      color: $accent-light;
+    }
+    .work-last {
+      display: block;
+      width: 100%;
+      border: 2px solid transparentize($accent-light, .8);
+      overflow: hidden;
+      margin: 0 auto;
+      margin-bottom: .5rem;
+      position: relative;
+      &::after {
+        display: none;
+      }
+      img {
+        max-width: 100%;
+        display: block;
+      }
+      cite {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        font-style: normal;
+        display: block;
+        padding: .4rem 0;
+        color: $accent-light;
+        width: 100%;
+        text-align: center;
+        background: $white;
+        transition: all .2s ease-in-out;
+      }
+      &:hover {
+        cite {
+          top: 82%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    .grid-big {
+      width: "";
+      flex-grow: 1.55;
+      img {
+        max-width: 30%;
+      }
+      p {
+        text-align: justify;
+      }
+    }
+    .grid-small {
+      width: "";
+      flex-grow: 1.45;
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .container {
+    .grid-big {
+      width: 100%;
+      img {
+        max-width: 30%;
+      }
+      p {
+        text-align: justify;
+      }
+    }
+    .grid-small {
+      width: 100%;
+    }
+  }
+}
+
+
+
+// Work styles
+
+.container-work {
+  max-width: 80rem;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  .work {
+    background: $white;
+    padding: 2rem;
+    border-radius: 5px;
+    border: 1px solid transparentize($accent-light, .8);
+    margin: .5rem .5rem;
+    text-align: center;
+    width: 23%;
+    transition: all .1s ease-in-out;
+    &:hover {
+      box-shadow: 0px 0px 2px rgba(0,0,0,.2);
+      h1 {
+        color: $accent;
+      }
+    }
+    img {
+      max-width: 100%;
+      display: block;
+    }
+    a {
+      text-decoration: none;
+    }
+    h1 {
+      transition: all .1s ease-in-out;
+      margin-top: 1.5rem;
+      font-size: .80rem;
+      text-transform: uppercase;
+      color: $text-color;
+      font-weight: 700;
+      letter-spacing: .5px;
+      @media screen and (max-width: 650px) {
+        font-size: .7rem;
+      }
+    }
+    @media screen and (max-width: 500px) {
+      width: 50%;
+    }
+  }
+  .no-works {
+    color: $accent-light;
+    font-size: 1.2rem;
+    padding: 1.5rem 3rem;
+    background: $white;
+    border-radius: 5px;
+    margin: 1rem;
+    text-align: center;
+    border: 2px solid transparentize($accent-light, .9);
+  }
+}
+
+.container-work-show {
+  max-width: 80rem;
+  margin: 2rem auto;
+  padding: 2rem;
+  text-align: center;
+  h1 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  p {
+    max-width: 80%;
+    margin: 0 auto;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+  }
+  img {
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+  a {
+    text-align: center;
+    display: inline-block;
+    margin: 0 .5rem;
+    margin-top: 2rem;
+    color: $white;
+    background: $accent;
+    padding: .5rem 2.5rem;
+    text-decoration: none;
+    letter-spacing: 2px;
+    transition: all .1s ease-in-out;
+    &:hover {
+      background: darken($accent, 20%);
+    }
+
+  }
+}
