--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'category' %>
 <%= form_for @article do |f| %>
 <%= f.text_field :name, placeholder: "Title" %>
 <%= f.text_field :image, placeholder: "Image URL"%>
