--- a/app/views/articles/_category.html.erb
+++ b/app/views/articles/_category.html.erb
@@ -1,10 +1,16 @@
 <nav class="category">
   <% Category.all.each do |c| %>
   <% if c.id == 1 %>
-    <%= link_to c.name, articles_path(c: c.name) %> <small>( <%= c.articles.count %> )</small>
+    <%= link_to(articles_path(c: c.name)) do %>
+      <%= c.name %>
+      <small>( <%= c.articles.count %> )</small>
+    <% end %>
   <% else %>
     <div class="separator"></div>
-    <%= link_to c.name, articles_path(c: c.name) %> <small>( <%= c.articles.count %> )</small>
+    <%= link_to(articles_path(c: c.name)) do %>
+      <%= c.name %>
+      <small>( <%= c.articles.count %> )</small>
+    <% end %>  
   <% end %>
   <% end %>
 </nav>
