--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -3,7 +3,9 @@
     <% @works.each do |w| %>
     <div class="work">
       <a href="<%= work_path(w) %>">
-        <img src="<%= w.thumbnail %>" alt="<%= w.name %>">
+        <div class="work_wrapper">
+          <img src="<%= w.thumbnail %>" alt="<%= w.name %>">
+        </div>
         <h1><%= w.name %></h1>
       </a>
     </div>
