--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-work-show">
   <h1><%= @work.name %></h1>
-  <p><%= @work.description %></p>
+  <p><%= markdown(@work.description) %></p>
   <img src="<%= @work.image %>" alt="<%= @work.name %>">
   <% if user_signed_in? %>
   <%= link_to "New", new_work_path %>
