--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="grid grid-big">
     <h1>Hi, I'm Telnair</h1>
-    <img src="http://i.imgur.com/Yg1E0Ep.png" alt="Icon of mine">
+    <img src="http://i.imgur.com/Fe6oxLL.png" alt="Icon of mine">
     <p>I’m an enthusiastic learner and spend my time coding, designing, drawing, creating illustrations, videos, playing guitar and basketball. I’m also a student at the faculty of translation for English and German languages. My biggest desire is the day to have more hours and to have enough energy to accomplish all of my plans.</p>
   </div>
   <div class="grid grid-small">
